# ingibcontrol

./: README.md
backend/auth/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/auth/app/api_site_v1/: __init__.py  depends.py  schemas.py
backend/auth/app/api_site_v1/auth/: dependencies.py  views.py
backend/auth/configs/: log_config.ini  loki-config.yaml  promtail-config.yaml
backend/auth/core/: config.py  logger.py  security.py
backend/auth/core/models/: __init__.py  base.py  db_connect.py
backend/auth/core/models/role/: role.py  role_group.py  role_group_association.py
backend/auth/core/models/user/: profile.py  user.py  user_association.py
backend/auth/migrations/: env.py
backend/auth/migrations/versions/: 2025-08-10-001.py
backend/auth/scripts/: init_certs.sh  init_db.sh  init_roles.py
backend/auth/static/: swagger-custom-ui.css
backend/auth/tests/: __init__.py  conftest.py
backend/auth/tests/api/: test_auth.py
frontend/ingibcontrol/app/: layout.tsx  page.tsx
frontend/ingibcontrol/components/: navbar.tsx
frontend/ingibcontrol/config/: site.ts
